Simplify eval code

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,3 +1,8 @@
+common:
+  model: ""
+  batch_size: 128
+  p_thresh: 3
+  graph_pairs_dir: /home/l/sg_pr_test_data
 arch:
   keep_node: 1
   filters_1: 64
@@ -6,9 +11,6 @@ arch:
   tensor_neurons: 16
   bottle_neck_neurons: 16
 train:
-  graph_pairs_dir: /home/l/sg_pr_test_data
-  p_thresh: 3
-  batch_size: 128
   epochs: 500
   fold: "00"
   dropout: 0
@@ -16,6 +18,8 @@ train:
   weight_decay: 0.0005
   gpu: 0
   logdir: "./logs"
-evo:
-  model: ""
+  node_num: 100
+eva:
+  sequences: ["05"]
+  output_path: "./eva"
   
