--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,8 @@
 common:
-  model: ""
+  model: "./model/model.pth"
   batch_size: 128
   p_thresh: 3
-  graph_pairs_dir: /home/l/sg_pr_test_data
+  graph_pairs_dir: ""
 arch:
   keep_node: 1
   filters_1: 64
@@ -19,7 +19,9 @@ train:
   gpu: 0
   logdir: "./logs"
   node_num: 100
-eva:
+eva_batch:
   sequences: ["05"]
   output_path: "./eva"
+eva_pair:
+  pair_file: "./data/test2.json"
   
