--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,8 @@
 common:
-  model: "" #pytorch model
+  model: "./model/model.pth" #pytorch model
   batch_size: 16  #batch size 
   p_thresh: 3 #distance threshold of positive sample
-  graph_pairs_dir: "" #dir contain training or testing data
+  graph_pairs_dir: "../SG_PR_DATA/graphs_rn" #dir contain training or testing data
 arch:
   keep_node: 1 #for test
   filters_1: 64
